saint-lascivious.github.io: remove a bunch of span tags
 - and various other random shutgun edits/fixes/patches

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   resources/stylesheets/.formatted/sainternet.min.css
 - modified:   resources/stylesheets/sainternet.min.css
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -138,7 +138,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -170,16 +170,16 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid" id="pokemon404">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</h3>
             <p class="embiggen sainternet-subheader-centered">
               A wild <b>Luxio</b> appeared!
             </p>
             <ul>
-              <li><a href="404.html#404examplequeries"><span class="embiggen">#Example Pokédex over DNS Queries</span></a></li>
-              <li><a href="404.html#404examplequeryusingdig"><span class="embiggen">#Using dig</span></a></li>
-              <li><a href="404.html#404examplequeryusingdnslookup"><span class="embiggen">#Using dnslookup</span></a></li>
-              <li><a href="404.html#404examplequeryusingnslookup"><span class="embiggen">#Using nslookup</span></a></li>
+              <li><a href="404.html#404examplequeries" class="embiggen">Example Pokédex over DNS Queries</a></li>
+              <li><a href="404.html#404examplequeryusingdig" class="embiggen">Using dig</a></li>
+              <li><a href="404.html#404examplequeryusingdnslookup" class="embiggen">Using dnslookup</a></li>
+              <li><a href="404.html#404examplequeryusingnslookup" class="embiggen">Using nslookup</a></li>
             </ul>
             <p>
               Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.
@@ -205,8 +205,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="404examplequeries">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Example Pokédex over DNS Queries</h3>
             <p class="embiggen sainternet-subheader-centered" id="404examplequeryusingdig">
               Using dig
             </p>
@@ -356,7 +356,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
