--- a/.formatted/archive.html
+++ b/.formatted/archive.html
@@ -136,7 +136,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -169,7 +169,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="newsandupdates.html">News and Updates</a> &gt; <a class="embiggen" href="#archivedposts"><b>Archived Posts</b></a>
             </div>
@@ -177,22 +177,22 @@
         </div>
         <div class="sainternet-container mdl-grid" id="archivedposts">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Archived Posts</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Archived Posts</h3>
             <ul>
-              <li><a href="archive.html#2022metrics"><span class="embiggen">#2022 Metrics</span></a></li>
-              <li><a href="archive.html#munin-pihole-plugins-v08-02-00"><span class="embiggen">#Munin Pi-hole Plugins: 08.02.00</span></a></li>
-              <li><a href="archive.html#reportingproblems"><span class="embiggen">#Reporting Problems</span></a></li>
-              <li><a href="archive.html#aquickstop"><span class="embiggen">#A QUICk Stop</span></a></li>
-              <li><a href="archive.html#materialdesigndark"><span class="embiggen">#Material Design <s>Lite</s> Dark</a></span></li>
-              <li><a href="archive.html#iosmacosmadeeasy"><span class="embiggen">#iOS/macOS Made Easy</span></a></li>
+              <li><a href="archive.html#2022metrics" class="embiggen">2022 Metrics</a></li>
+              <li><a href="archive.html#munin-pihole-plugins-v08-02-00" class="embiggen">Munin Pi-hole Plugins: 08.02.00</a></li>
+              <li><a href="archive.html#reportingproblems" class="embiggen">Reporting Problems</a></li>
+              <li><a href="archive.html#aquickstop" class="embiggen">A QUICk Stop</a></li>
+              <li><a href="archive.html#materialdesigndark" class="embiggen">Material Design <s>Lite</s> Dark</a></span></li>
+              <li><a href="archive.html#iosmacosmadeeasy" class="embiggen">iOS/macOS Made Easy</a></li>
             </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="2022metrics">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">2022 Metrics</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">2022 Metrics</h3>
             <p class="embiggen" id="datetime">
               Friday, 1 January 2023 00:00+13:00 (NZDT)
             </p>
@@ -218,8 +218,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="munin-pihole-plugins-v08-02-00">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Munin Pi-hole Plugins: 08.02.00</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Munin Pi-hole Plugins: 08.02.00</h3>
             <p class="embiggen" id="datetime">
               Monday, 26 December 2022 22:30+13:00 (NZDT)
             </p>
@@ -242,8 +242,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="reportingproblems">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Reporting Problems</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Reporting Problems</h3>
             <p class="embiggen" id="datetime">
               Friday, 23 December 2022 01:00+13:00 (NZDT)
             </p>
@@ -257,8 +257,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="aquickstop">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">A QUICk Stop</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">A QUICk Stop</h3>
             <p class="embiggen" id="datetime">
               Wednesday, 21 December 2022 06:00+13:00 (NZDT)
             </p>
@@ -269,8 +269,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="materialdesigndark">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Material Design <s>Lite</s> Dark</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Material Design <s>Lite</s> Dark</h3>
             <p class="embiggen" id="datetime">
               Thursday, 8 December 2022 13:00+13:00 (NZDT)
             </p>
@@ -284,8 +284,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="iosmacosmadeeasy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">iOS/macOS Made Easy</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">iOS/macOS Made Easy</h3>
             <p class="embiggen" id="datetime">
               Friday, 18 November 2022 22:30+13:00 (NZDT)
             </p>
@@ -336,7 +336,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
