--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -126,7 +126,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -163,7 +163,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#connecttosainternet"><b>Connect to Sainternet</b></a>
             </div>
@@ -171,23 +171,23 @@
         </div>
         <div class="sainternet-container mdl-grid" id="connecttosainternet">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Connect to Sainternet</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Connect to Sainternet</h3>
             <p>
               The following describes connecting to Sainternet Filtered DNS in several platforms, services.
             </p>
             <ul>
-              <li><a href="connecttosainternet.html#androidprivatedns"><span class="embiggen">#Android Private DNS</span></a></li>
-              <li><a href="connecttosainternet.html#appleiosmacos"><span class="embiggen">#Apple iOS/MacOS</span></a></li>
-              <li><a href="connecttosainternet.html#googlechromechromium"><span class="embiggen">#Google Chrome/Chromium</span></a></li>
-              <li><a href="connecttosainternet.html#mozillafirefox"><span class="embiggen">#Mozilla Firefox</span></a></li>
+              <li><a href="connecttosainternet.html#androidprivatedns" class="embiggen">Android Private DNS</a></li>
+              <li><a href="connecttosainternet.html#appleiosmacos" class="embiggen">Apple iOS/MacOS</a></li>
+              <li><a href="connecttosainternet.html#googlechromechromium" class="embiggen">Google Chrome/Chromium</a></li>
+              <li><a href="connecttosainternet.html#mozillafirefox" class="embiggen">Mozilla Firefox</a></li>
             </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon>&nbsp;<span class="embiggen">Android<br>Private DNS</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon>&nbsp;<span class="embiggen">Android<br>Private DNS</h3>
             <p class="embiggen sainternet-subheader-centered">
               Android 9 (Pie) or higher required.
             </p>
@@ -204,8 +204,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="appleiosmacos">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><icon class="fa-brands fa-apple"></icon>&nbsp;<span class="embiggen">Apple<br>iOS/macOS</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><icon class="fa-brands fa-apple"></icon>&nbsp;<span class="embiggen">Apple<br>iOS/macOS</h3>
             <p class="embiggen sainternet-subheader-centered">
               Apple iOS 14/macOS Big Sur or higher required.
             </p>
@@ -248,8 +248,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="googlechromechromium">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><icon class="fa-brands fa-chrome"></icon>&nbsp;<span class="embiggen">Google<br>Chrome/Chromium</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><icon class="fa-brands fa-chrome"></icon>&nbsp;<span class="embiggen">Google<br>Chrome/Chromium</h3>
             <ol>
               <li>Overflow Menu&nbsp;<icon class="material-icons">more_vert</icon></li>
               <li>Settings&nbsp;<icon class="material-icons">settings</icon></li>
@@ -263,8 +263,8 @@
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon>&nbsp;<span class="embiggen">Mozilla<br>Firefox</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon>&nbsp;<span class="embiggen">Mozilla<br>Firefox</h3>
             <ol>
               <li>Menu&nbsp;<icon class="material-icons">menu</icon></li>
               <li>Settings&nbsp;<icon class="material-icons">settings</icon></li>
@@ -325,7 +325,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
