--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -121,7 +121,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -152,20 +152,20 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid" id="debug">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Debug</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Debug</h3>
             <ul>
-              <li><a href="debug.html#consolelogging"><span class="embiggen">#Console Logging</span></a></li>
-              <li><a href="debug.html#deletestorage"><span class="embiggen">#Delete Storage</span></a></li>
-              <li><a href="debug.html#pingserviceworker"><span class="embiggen">#Ping Service Worker</span></a></li>
-              <li><a href="debug.html#serviceworkerinfo"><span class="embiggen">#Service Worker Info</span></a></li>
+              <li><a href="debug.html#consolelogging" class="embiggen">Console Logging</a></li>
+              <li><a href="debug.html#deletestorage" class="embiggen">Delete Storage</a></li>
+              <li><a href="debug.html#pingserviceworker" class="embiggen">Ping Service Worker</a></li>
+              <li><a href="debug.html#serviceworkerinfo" class="embiggen">Service Worker Info</a></li>
             </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="consolelogging">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Console Logging</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Console Logging</h3>
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" id="button_consolelogging" onclick="toggleConsoleLogging();">
               Console Logging
             </button>
@@ -176,8 +176,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="deletestorage">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Delete Storage</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Delete Storage</h3>
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" id="button_deletestorage" onclick="deleteLocalStorageAndSessionStorage();">
               Delete Storage
             </button>
@@ -188,8 +188,8 @@
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Ping Service Worker</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Ping Service Worker</h3>
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" id="button_pingserviceworker" onclick="pingServiceWorker();">
               Ping Service Worker
             </button>
@@ -200,8 +200,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="serviceworkerinfo">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Service Worker Info</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Service Worker Info</h3>
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" id="button_serviceworkerinfo" onclick="getServiceWorkerInfo();">
               Service Worker Info
             </button>
@@ -249,7 +249,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
