--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -124,7 +124,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -155,7 +155,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-highlights" id="sainternet-urls">
               <a href="newsandupdates.html#enablejavascript">Enable JavaScript</a>
             </div>
@@ -166,8 +166,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="welcome">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Welcome</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Welcome</h3>
             <p class="embiggen sainternet-subheader-centered">
               Welcome to Sainternet.
             </p>
@@ -180,7 +180,7 @@
             <p>
               Take a look around, there's a menu icon at the top left, and/or shortcuts in the header above (desktop and mobile/tablet layouts may differ), you may find something that interests you here.
             </p>
-            <a href="pokedexoverdns.html" class="subterfuge" id="image-wurm">
+            <div id="hero-image">
               <picture class="light-mode-img">
                 <source srcset="resources/images/wurmple.webp" type="image/webp">
                 <source srcset="resources/images/wurmple.png" type="image/png">
@@ -193,10 +193,10 @@
                 <source srcset="resources/images/wurmple-shiny.jpeg" type="image/jpeg">
                 <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
               </picture>
-            </a>
-            <a class="mdl-tooltip mdl-tooltip--top" for="image-wurm">
+            </div>
+            <div class="mdl-tooltip mdl-tooltip--top" for="hero-image">
               Image supplied not illustrative, the author is not a Pokémon.
-            </a>
+            </div>
           </div>
         </div>
       </main>
