--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -149,7 +149,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -182,7 +182,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#newsandupdates"><b>News and Updates</b></a>
             </div>
@@ -190,30 +190,30 @@
         </div>
         <div class="sainternet-container mdl-grid" id="newsandupdates">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">News and Updates</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">News and Updates</h3>
             <p>
               This page will serve to detail news and updates relevant to Sainternet such as new features and developments, planned maintenance, etc.
             </p>
             <ul>
-              <li>&gt; <a href="devdiary.html#devdiary"><span class="embiggen">Dev Diary</span></a></li>
-              <li>&gt; <a href="archive.html#archivedposts"><span class="embiggen">Archived Posts</span></a></li>
+              <li><a href="devdiary.html#devdiary" class="embiggen">Dev Diary</a></li>
+              <li><a href="archive.html#archivedposts" class="embiggen">Archived Posts</a></li>
             </ul>
             <ul>
-              <li><a href="newsandupdates.html#everycatdeservesscritchesalways"><span class="embiggen">#Every Cat Deserves Scritches, Always</span></a></li>
-              <li><a href="newsandupdates.html#somepunaboutblocksorblocking"><span class="embiggen">#Some Pun About Blocks or Blocking</span></a></li>
-              <li><a href="newsandupdates.html#thepolishinvasionof2023"><span class="embiggen">#The Polish Invasion of 2023</span></a></li>
-              <li><a href="newsandupdates.html#certaindoom"><span class="embiggen">#CERTain Doom</span></a></li>
-              <li><a href="newsandupdates.html#unepokedexsilvousplait"><span class="embiggen">#Une Pokédex, S'il Vous Plaît</span></a></li>
-              <li><a href="newsandupdates.html#analyticsdisclosure"><span class="embiggen">#Analytics Disclosure</span></a></li>
-              <li><a href="newsandupdates.html#pwa"><span class="embiggen">#PWA!</span></a></li>
+              <li><a href="newsandupdates.html#everycatdeservesscritchesalways" class="embiggen">Every Cat Deserves Scritches, Always</a></li>
+              <li><a href="newsandupdates.html#somepunaboutblocksorblocking" class="embiggen">Some Pun About Blocks or Blocking</a></li>
+              <li><a href="newsandupdates.html#thepolishinvasionof2023" class="embiggen">The Polish Invasion of 2023</a></li>
+              <li><a href="newsandupdates.html#certaindoom" class="embiggen">CERTain Doom</a></li>
+              <li><a href="newsandupdates.html#unepokedexsilvousplait" class="embiggen">Une Pokédex, S'il Vous Plaît</a></li>
+              <li><a href="newsandupdates.html#analyticsdisclosure" class="embiggen">Analytics Disclosure</a></li>
+              <li><a href="newsandupdates.html#pwa" class="embiggen">PWA!</a></li>
             </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="everycatdeservesscritchesalways">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Every Cat Deserves Scritches, Always</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Every Cat Deserves Scritches, Always</h3>
             <p class="embiggen" id="datetime">
               first posted on Thursday, 1 June 2023 00:20+12:00 (NZST)
             </p>
@@ -224,8 +224,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="somepunaboutblocksorblocking">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Some Pun About Blocks or Blocking</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Some Pun About Blocks or Blocking</h3>
             <p class="embiggen" id="datetime">
               first posted on Monday, 8 May 2023 16:40+12:00 (NZST)
             </p>
@@ -301,8 +301,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="thepolishinvasionof2023">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">The Polish Invasion of 2023</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">The Polish Invasion of 2023</h3>
             <p class="embiggen" id="datetime">
               first posted on Sunday, 6 May 2023 21:00+12:00 (NZST)
             </p>
@@ -393,8 +393,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="certaindoom">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">CERTain Doom</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">CERTain Doom</h3>
             <p class="embiggen" id="datetime">
               first posted on Monday, 1 May 2023 21:00+12:00 (NZST)
             </p>
@@ -443,8 +443,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="enablejavascript">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Enable JavaScript</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Enable JavaScript</h3>
             <p class="embiggen" id="datetime">
               first posted on Tuesday, 25 April 2023 01:15+12:00 (NZST)
             </p>
@@ -458,8 +458,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="unepokedexsilvousplait">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Une Pokédex, S'il Vous Plaît</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Une Pokédex, S'il Vous Plaît</h3>
             <p class="embiggen" id="datetime">
               first posted on Tuesday, 11 April 2023 01:00+12:00 (NZST)<br>updated on Friday, 2 June 2023 00:15+12:00 (NZST)
             </p>
@@ -578,8 +578,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="analyticsdisclosure">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Analytics Disclosure</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Analytics Disclosure</h3>
             <p class="embiggen" id="datetime">
               Wednesday, 15 February 2023 01:00+13:00 (NZDT)
             </p>
@@ -602,8 +602,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="pwa">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">PWA!</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">PWA!</h3>
             <p class="embiggen" id="datetime">
               Sunday, 22 January 2023 06:00+13:00 (NZDT)
             </p>
@@ -626,7 +626,7 @@
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs" id="archive-crumb">
               <a class="embiggen" href="archive.html">Archived Posts</a>
             </div>
@@ -674,7 +674,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
