--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -136,7 +136,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -167,7 +167,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#pokedexoverdns"><b>National Pokédex over DNS</b></a>
             </div>
@@ -175,14 +175,15 @@
         </div>
         <div class="sainternet-container mdl-grid" id="pokedexoverdns">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">National Pokédex over DNS</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">National Pokédex over DNS</h3>
             <ul>
-              <li><a href="pokedexoverdns.html#examplequeries"><span class="embiggen">#Example Pokédex over DNS Queries</span></a></li>
-              <li><a href="pokedexoverdns.html#examplequeryusingdig"><span class="embiggen">#Using dig</span></a></li>
-              <li><a href="pokedexoverdns.html#examplequeryusingdnslookup"><span class="embiggen">#Using dnslookup</span></a></li>
-              <li><a href="pokedexoverdns.html#examplequeryusingnslookup"><span class="embiggen">#Using nslookup</span></a></li>
-              <li><a href="pokedexoverdns.html#nationalpokedexunboundconfiguration"><span class="embiggen">#National Pokédex Unbound Configuration</span></a></li>
+              <li><a href="pokedexoverdns.html#examplequeries" class="embiggen">Example Pokédex over DNS Queries</a></li>
+              <li><a href="pokedexoverdns.html#examplequeryusingdig" class="embiggen">Using dig</a></li>
+              <li><a href="pokedexoverdns.html#examplequeryusingdnslookup" class="embiggen">Using dnslookup</a></li>
+              <li><a href="pokedexoverdns.html#examplequeryusingnslookup" class="embiggen">Using nslookup</a></li>
+              <li><a href="pokedexoverdns.html#unboundconfiguration" class="embiggen">Unbound Configuration</a></li>
+              <li><a href="pokedexoverdns.html#nationalpokedexunboundconfiguration" class="embiggen">National Pokédex Unbound Configuration</a></li>
             </ul>
             <p>
               Sainternet is proud to present to you the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT record</a> based National Pokédex over DNS!
@@ -207,8 +208,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="examplequeries">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Example Pokédex over DNS Queries</h3>
             <p class="embiggen sainternet-subheader-centered" id="examplequeryusingdig">
               Using dig
             </p>
@@ -317,6 +318,12 @@
             <div class="enlift rounded-corners shadow-boxing">
               <pre>nslookup -type=txt waumpel.pokedex dns.sainternet.xyz</pre>
             </div>
+          </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="unboundconfiguration">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Unbound Configuration</h3>
             <p class="embiggen sainternet-subheader-centered" id="nationalpokedexunboundconfiguration">
               National Pokédex Unbound Configuration
             </p>
@@ -364,7 +371,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
