--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -130,7 +130,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -167,7 +167,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#portsandprotocols"><b>Ports and Protocols</b></a>
             </div>
@@ -175,22 +175,22 @@
         </div>
         <div class="sainternet-container mdl-grid" id="portsandprotocols">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Ports and Protocols</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Ports and Protocols</h3>
             <p>
               Sainternet Filtered DNS is available over the following ports and protocols.
             </p>
             <ul>
-              <li><a href="portsandprotocols.html#encrypteddns"><span class="embiggen">#Encrypted DNS</span></a></li>
-              <li><a href="portsandprotocols.html#dnsoverhttps"><span class="embiggen">#HTTPS</span></a></li>
-              <li><a href="portsandprotocols.html#dnsoverhttp3"><span class="embiggen">#HTTP/3</span></a></li>
-              <li><a href="portsandprotocols.html#dnsovertls"><span class="embiggen">#TLS</span></a></li>
-              <li><a href="portsandprotocols.html#dnsoverquic"><span class="embiggen">#QUIC</span></a></li>
+              <li><a href="portsandprotocols.html#encrypteddns" class="embiggen">Encrypted DNS</a></li>
+              <li><a href="portsandprotocols.html#dnsoverhttps" class="embiggen">HTTPS</a></li>
+              <li><a href="portsandprotocols.html#dnsoverhttp3" class="embiggen">HTTP/3</a></li>
+              <li><a href="portsandprotocols.html#dnsovertls" class="embiggen">TLS</a></li>
+              <li><a href="portsandprotocols.html#dnsoverquic" class="embiggen">QUIC</a></li>
             </ul>
             <ul>
-              <li><a href="portsandprotocols.html#unencrypteddns"><span class="embiggen">#Unencrypted DNS</span></a></li>
-              <li><a href="portsandprotocols.html#dnsovertcp"><span class="embiggen">#TCP</span></a></li>
-              <li><a href="portsandprotocols.html#dnsoverudp"><span class="embiggen">#UDP</span></a></li>
+              <li><a href="portsandprotocols.html#unencrypteddns" class="embiggen">Unencrypted DNS</a></li>
+              <li><a href="portsandprotocols.html#dnsovertcp" class="embiggen">TCP</a></li>
+              <li><a href="portsandprotocols.html#dnsoverudp" class="embiggen">UDP</a></li>
             </ul>
             <p class="embiggen sainternet-subheader-centered" id="encrypteddns">
               Encrypted DNS
@@ -287,7 +287,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
