--- a/.formatted/technologies.html
+++ b/.formatted/technologies.html
@@ -126,7 +126,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -163,7 +163,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#technologies"><b>Technologies</b></a>
             </div>
@@ -171,23 +171,23 @@
         </div>
         <div class="sainternet-container mdl-grid" id="technologies">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Technologies</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Technologies</h3>
             <p>
               Sainternet Filtered DNS (<code>dns.sainternet.xyz</code>) is made possible using, but neither endorsed nor condoned by, the following projects.
             </p>
             <ul>
-              <li><a href="technologies.html#dnsdist"><span class="embiggen">#dnsdist</span></a></li>
-              <li><a href="technologies.html#dnsproxy"><span class="embiggen">#dnsproxy</span></a></li>
-              <li><a href="technologies.html#piholeftl"><span class="embiggen">#pihole-FTL</span></a></li>
-              <li><a href="technologies.html#unbound"><span class="embiggen">#unbound</span></a></li>
+              <li><a href="technologies.html#dnsdist" class="embiggen">dnsdist</a></li>
+              <li><a href="technologies.html#dnsproxy" class="embiggen">dnsproxy</a></li>
+              <li><a href="technologies.html#piholeftl" class="embiggen">pihole-FTL</a></li>
+              <li><a href="technologies.html#unbound" class="embiggen">unbound</a></li>
             </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="dnsdist">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">dnsdist</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">dnsdist</h3>
             <p>
               <a href="https://github.com/PowerDNS/pdns/blob/master/pdns/README-dnsdist.md">dnsdist</a>
             </p>
@@ -198,8 +198,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="dnsproxy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">dnsproxy</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">dnsproxy</h3>
             <p>
               <a href="https://github.com/AdguardTeam/dnsproxy">dnsproxy</a>
             </p>
@@ -210,8 +210,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="piholeftl">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">pihole-FTL</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">pihole-FTL</h3>
             <p>
               <a href="https://github.com/pi-hole/FTL">pihole-FTL</a>
             </p>
@@ -222,8 +222,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="unbound">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">unbound</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">unbound</h3>
             <p>
               <a href="https://github.com/NLnetLabs/unbound">unbound</a>
             </p>
@@ -271,7 +271,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
