--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -136,7 +136,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -168,7 +168,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="pokedexoverdns.html">Pokédex over DNS</a> &gt; <a class="embiggen" href="#pokemon265"><b>Pokémon #265</b></a>
             </div>
@@ -176,16 +176,16 @@
         </div>
         <div class="sainternet-container mdl-grid" id="pokemon265">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Pokémon #265<br>Wurmple</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Pokémon #265<br>Wurmple</h3>
             <p class="embiggen sainternet-subheader-centered">
               A wild <b>Wurmple</b> appeared!
             </p>
             <ul>
-              <li><a href="265.html#265examplequeries"><span class="embiggen">#Example Pokédex over DNS Queries</span></a></li>
-              <li><a href="265.html#265examplequeryusingdig"><span class="embiggen">#Using dig</span></a></li>
-              <li><a href="265.html#265examplequeryusingdnslookup"><span class="embiggen">#Using dnslookup</span></a></li>
-              <li><a href="265.html#265examplequeryusingnslookup"><span class="embiggen">#Using nslookup</span></a></li>
+              <li><a href="265.html#265examplequeries" class="embiggen">Example Pokédex over DNS Queries</a></li>
+              <li><a href="265.html#265examplequeryusingdig" class="embiggen">Using dig</a></li>
+              <li><a href="265.html#265examplequeryusingdnslookup" class="embiggen">Using dnslookup</a></li>
+              <li><a href="265.html#265examplequeryusingnslookup" class="embiggen">Using nslookup</a></li>
             </ul>
             <p>
               Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping.
@@ -211,8 +211,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="265examplequeries">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Example Pokédex over DNS Queries</h3>
             <p class="embiggen sainternet-subheader-centered" id="265examplequeryusingdig">
               Using dig
             </p>
@@ -362,7 +362,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
