--- a/.formatted/devdiary.html
+++ b/.formatted/devdiary.html
@@ -136,7 +136,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -169,7 +169,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="newsandupdates.html">News and Updates</a> &gt; <a class="embiggen" href="devdiary.html"><b>Dev Diary</b></a>
             </div>
@@ -177,8 +177,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="devdiary">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Dev Diary</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Dev Diary</h3>
             <p class="embiggen sainternet-subheader-centered">
               Inane Ramblings
             </p>
@@ -186,17 +186,17 @@
               Often about technical topics.
             </p>
             <ul>
-              <li><a href="devdiary.html#killinghalfmyuserbaseandwhyiddoitagain"><span class="embiggen">#Killing Half My Userbase, and Why I’d Do It Again</span></a></li>
-              <li><a href="devdiary.html#idliketothinkimprettyprogressive"><span class="embiggen">#I’d Like to Think I’m Pretty Progressive</span></a></li>
-              <li><a href="devdiary.html#gottagofast"><span class="embiggen">#Gotta Go Fast!</span></a></li>
-              <li><a href="devdiary.html#goingoffline"><span class="embiggen">#Going Offline</span></a></li>
+              <li><a href="devdiary.html#killinghalfmyuserbaseandwhyiddoitagain" class="embiggen" id="seriousbusiness">Killing Half My Userbase, and Why I’d Do It Again</a><a class="mdl-tooltip mdl-tooltip--top" for="seriousbusiness">True story.</a></li>
+              <li><a href="devdiary.html#idliketothinkimprettyprogressive" class="embiggen">I’d Like to Think I’m Pretty Progressive</a></li>
+              <li><a href="devdiary.html#gottagofast" class="embiggen">Gotta Go Fast!</a></li>
+              <li><a href="devdiary.html#goingoffline" class="embiggen">Going Offline</a></li>
             </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="killinghalfmyuserbaseandwhyiddoitagain">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Killing Half My Userbase, and Why I’d Do It Again</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Killing Half My Userbase, and Why I’d Do It Again</h3>
             <p class="embiggen" id="datetime">
               first posted on Thursday, 1 June 2023 01:10+12:00 (NZST)
             </p>
@@ -222,8 +222,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="idliketothinkimprettyprogressive">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">I’d Like to Think I’m Pretty Progressive</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">I’d Like to Think I’m Pretty Progressive</h3>
             <p class="embiggen" id="datetime">
               first posted on Thursday, 11 May 2023 21:10+12:00 (NZST)
             </p>
@@ -272,8 +272,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="gottagofast">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Gotta Go Fast!</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Gotta Go Fast!</h3>
             <p class="embiggen" id="datetime">
               first posted on Tuesday, 9 May 2023 07:00+12:00 (NZST)<br>updated on Tuesday, 9 May 2023 21:45+12:00 (NZST)
             </p>
@@ -355,8 +355,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="goingoffline">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Going Offline</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Going Offline</h3>
             <p class="embiggen" id="datetime">
               first posted on Friday, 14 April 2023 22:30+12:00 (NZST)<br>updated on Saturday, 15 April 2023 21:30+12:00 (NZST)
             </p>
@@ -431,7 +431,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
