--- a/.formatted/filtereddns.html
+++ b/.formatted/filtereddns.html
@@ -133,7 +133,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -170,7 +170,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#filtereddns"><b>Filtered DNS</b></a>
             </div>
@@ -178,15 +178,15 @@
         </div>
         <div class="sainternet-container mdl-grid" id="filtereddns">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Filtered DNS</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Filtered DNS</h3>
             <ul>
-              <li>&gt; <a href="frequentlyaskedquestions.html#frequentlyaskedquestions"><span class="embiggen">Frequently Asked Questions</span></a></li>
-              <li>&gt; <a href="connecttosainternet.html#connecttosainternet"><span class="embiggen">Connect to Sainternet</span></a></li>
-              <li>&gt; <a href="portsandprotocols.html#portsandprotocols"><span class="embiggen">Ports and Protocols</span></a></li>
-              <li>&gt; <a href="technologies.html#technologies"><span class="embiggen">Technologies</span></a></li>
-              <li>&gt; <a href="testsainternet.html#testsainternet"><span class="embiggen">Test Sainternet</span></a></li>
-              <li>&gt; <a href="reportaproblem.html#reportaproblem"><span class="embiggen">Report a Problem</span></a></li>
+              <li><a href="frequentlyaskedquestions.html#frequentlyaskedquestions" class="embiggen">Frequently Asked Questions</a></li>
+              <li><a href="connecttosainternet.html#connecttosainternet" class="embiggen">Connect to Sainternet</a></li>
+              <li><a href="portsandprotocols.html#portsandprotocols" class="embiggen">Ports and Protocols</a></li>
+              <li><a href="technologies.html#technologies" class="embiggen">Technologies</a></li>
+              <li><a href="testsainternet.html#testsainternet" class="embiggen">Test Sainternet</a></li>
+              <li><a href="reportaproblem.html#reportaproblem" class="embiggen">Report a Problem</a></li>
             </ul>
             <p>
               Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over <a href="portsandprotocols.html#portsandprotocols">all your favourite acronyms</a>.
@@ -244,7 +244,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
