--- a/.formatted/frequentlyaskedquestions.html
+++ b/.formatted/frequentlyaskedquestions.html
@@ -121,7 +121,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -158,7 +158,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a>
             </div>
@@ -166,28 +166,28 @@
         </div>
         <div class="sainternet-container mdl-grid" id="frequentlyaskedquestions">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Frequently Asked Questions</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Frequently Asked Questions</h3>
             <p>
               Answers to some frequently asked questions regarding <code>dns.sainternet.xyz</code> and <code>sainternet.xyz</code>.
             </p>
             <ul>
-              <li><a href="frequentlyaskedquestions.html#yourispisokwiththis"><span class="embiggen">#Your ISP Is OK with This?</span></a></li>
-              <li><a href="frequentlyaskedquestions.html#whatswithalltherainbows"><span class="embiggen">#What’s with All the Rainbows?</span></a></li>
-              <li><a href="frequentlyaskedquestions.html#isdnssainternetxyzlegal"><span class="embiggen">#Is dns.sainternet.xyz Legal?</span></a></li>
-              <li><a href="frequentlyaskedquestions.html#doesdnssainternetxyzhaveanapi"><span class="embiggen">#Does dns.sainternet.xyz Have an API?</span></a></li>
-              <li><a href="frequentlyaskedquestions.html#whydoesntthepwaversioneverchange"><span class="embiggen">#Why Doesn’t the PWA Version Ever Change?</span></a></li>
-              <li><a href="frequentlyaskedquestions.html#whowhatwhenwhereandwhy"><span class="embiggen">#Who, What, When, Where and Why?</span></a></li>
-              <li><a href="frequentlyaskedquestions.html#howmuch"><span class="embiggen">#How Much?</span></a></li>
-              <li><a href="frequentlyaskedquestions.html#howdoessainternetmakemoney"><span class="embiggen">#How Does Sainternet Make Money?</span></a></li>
-              <li><a href="frequentlyaskedquestions.html#sowhofundssainternet"><span class="embiggen">#So, Who Funds Sainternet?</span></a></li>
+              <li><a href="frequentlyaskedquestions.html#yourispisokwiththis" class="embiggen">Your ISP Is OK with This?</a></li>
+              <li><a href="frequentlyaskedquestions.html#whatswithalltherainbows" class="embiggen">What’s with All the Rainbows?</a></li>
+              <li><a href="frequentlyaskedquestions.html#isdnssainternetxyzlegal" class="embiggen">Is dns.sainternet.xyz Legal?</a></li>
+              <li><a href="frequentlyaskedquestions.html#doesdnssainternetxyzhaveanapi" class="embiggen">Does dns.sainternet.xyz Have an API?</a></li>
+              <li><a href="frequentlyaskedquestions.html#whydoesntthepwaversioneverchange" class="embiggen">Why Doesn’t the PWA Version Ever Change?</a></li>
+              <li><a href="frequentlyaskedquestions.html#whowhatwhenwhereandwhy" class="embiggen">Who, What, When, Where and Why?</a></li>
+              <li><a href="frequentlyaskedquestions.html#howmuch" class="embiggen">How Much?</a></li>
+              <li><a href="frequentlyaskedquestions.html#howdoessainternetmakemoney" class="embiggen">How Does Sainternet Make Money?</a></li>
+              <li><a href="frequentlyaskedquestions.html#sowhofundssainternet" class="embiggen">So, Who Funds Sainternet?</a></li>
             </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="yourispisokwiththis">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Your ISP Is OK with This?</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Your ISP Is OK with This?</h3>
             <p class="embiggen sainternet-subheader-centered">
               This Is Residential, Right?
             </p>
@@ -210,8 +210,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="whatswithalltherainbows">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">What’s with All the Rainbows?</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">What’s with All the Rainbows?</h3>
             <p class="embiggen sainternet-subheader-centered">
               People Actually Ask This Question?
             </p>
@@ -273,8 +273,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="isdnssainternetxyzlegal">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Is dns.sainternet.xyz Legal?</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Is dns.sainternet.xyz Legal?</h3>
             <p>
               Yes.
             </p>
@@ -291,8 +291,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="doesdnssainternetxyzhaveanapi">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Does dns.sainternet.xyz Have an API?</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Does dns.sainternet.xyz Have an API?</h3>
             <p>
               No.
             </p>
@@ -300,8 +300,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="whydoesntthepwaversioneverchange">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Why Doesn’t the PWA Version Ever Change?</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Why Doesn’t the PWA Version Ever Change?</h3>
             <p class="embiggen sainternet-subheader-centered">
               In Short
             </p>
@@ -321,8 +321,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="whowhatwhenwhereandwhy">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Who, What,<br>When, Where and Why?</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Who, What,<br>When, Where and Why?</h3>
             <p class="embiggen sainternet-subheader-centered">
               Who?
             </p>
@@ -367,8 +367,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="howmuch">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">How Much?</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">How Much?</h3>
             <p>
               Nothing.
             </p>
@@ -379,8 +379,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="howdoessainternetmakemoney">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">How Does Sainternet Make Money?</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">How Does Sainternet Make Money?</h3>
             <p>
               It doesn't.
             </p>
@@ -388,8 +388,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="sowhofundssainternet">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">So, Who Funds Sainternet?</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">So, Who Funds Sainternet?</h3>
             <p>
               I do.
             </p>
@@ -437,7 +437,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
