--- a/.formatted/projects.html
+++ b/.formatted/projects.html
@@ -117,7 +117,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -148,7 +148,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#projects"><b>Popular Projects</b></a>
             </div>
@@ -156,24 +156,24 @@
         </div>
         <div class="sainternet-container mdl-grid" id="projects">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Popular Projects</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Popular Projects</h3>
             <p>
               This page lists some of my more popular projects on GitHub.
             </p>
             <ul>
-              <li><a href="projects.html#dnsproxy-config"><span class="embiggen">#dnsproxy config</span></a></li>
-              <li><a href="projects.html#haha_cache_go_brrr"><span class="embiggen">#haha cache go brrr</span></a></li>
-              <li><a href="projects.html#munin-pihole-plugins"><span class="embiggen">#munin pihole plugins</span></a></li>
-              <li><a href="projects.html#saint-lascivious_github_io"><span class="embiggen">#sainternet.xyz</span></a></li>
-              <li><a href="projects.html#unbound-config"><span class="embiggen">#unbound config</span></a></li>
+              <li><a href="projects.html#dnsproxy-config" class="embiggen">dnsproxy config</a></li>
+              <li><a href="projects.html#haha_cache_go_brrr" class="embiggen">haha cache go brrr</a></li>
+              <li><a href="projects.html#munin-pihole-plugins" class="embiggen">munin pihole plugins</a></li>
+              <li><a href="projects.html#saint-lascivious_github_io" class="embiggen">sainternet.xyz</a></li>
+              <li><a href="projects.html#unbound-config" class="embiggen">unbound config</a></li>
             </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="dnsproxy-config">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">dnsproxy config</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">dnsproxy config</h3>
             <p>
               <a href="https://github.com/saint-lascivious/dnsproxy-config">dnsproxy-config</a>
             </p>
@@ -187,8 +187,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="haha_cache_go_brrr">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">haha cache go brrr</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">haha cache go brrr</h3>
             <p>
               <a href="https://github.com/saint-lascivious/haha_cache_go_brrr">haha_cache_go_brrr</a>
             </p>
@@ -199,8 +199,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="munin-pihole-plugins">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">munin pihole plugins</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">munin pihole plugins</h3>
             <p>
               <a href="https://github.com/saint-lascivious/munin-pihole-plugins">munin-pihole-plugins</a>
             </p>
@@ -211,8 +211,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="saint-lascivious_github_io">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">sainternet.xyz</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">sainternet.xyz</h3>
             <p>
               <a href="https://github.com/saint-lascivious/saint-lascivious.github.io">saint-lascivious.github.io</a>
             </p>
@@ -226,8 +226,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="unbound-config">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">unbound config</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">unbound config</h3>
             <p>
               <a href="https://github.com/pi-hole/FTL">unbound-config</a>
             </p>
@@ -278,7 +278,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
