--- a/.formatted/reportaproblem.html
+++ b/.formatted/reportaproblem.html
@@ -126,7 +126,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DT44KL" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header mdl-shadow--4dp enlift">
+      <header class="mdl-layout__header mdl-shadow--2dp enlift">
         <div class="mdl-layout__header-row">
           <span class="embiggen mdl-layout-title">sainternet.xyz</span>
           <div class="mdl-layout-spacer"></div>
@@ -163,7 +163,7 @@
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+          <div class="sainternet-navigation mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
               <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="filtereddns.html">Filtered DNS</a> &gt; <a class="embiggen" href="#reportaproblem"><b>Report a Problem</b></a>
             </div>
@@ -171,23 +171,23 @@
         </div>
         <div class="sainternet-container mdl-grid" id="reportaproblem">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Report a Problem</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Report a Problem</h3>
             <p>
               The following sections describe various ways in which adding your voice can help <code>dns.sainternet.xyz</code> and, or <code>sainternet.xyz</code> improve.
             </p>
             <ul>
-              <li><a href="reportaproblem.html#bugreport"><span class="embiggen">#Bug Report</span></a></li>
-              <li><a href="reportaproblem.html#blacklistproposal"><span class="embiggen">#Blacklist Proposal</span></a></li>
-              <li><a href="reportaproblem.html#whitelistproposal"><span class="embiggen">#Whitelist Proposal</span></a></li>
-              <li><a href="reportaproblem.html#securitydisclosure"><span class="embiggen">#Security Disclosure</span></a></li>
+              <li><a href="reportaproblem.html#bugreport" class="embiggen">Bug Report</a></li>
+              <li><a href="reportaproblem.html#blacklistproposal" class="embiggen">Blacklist Proposal</a></li>
+              <li><a href="reportaproblem.html#whitelistproposal" class="embiggen">Whitelist Proposal</a></li>
+              <li><a href="reportaproblem.html#securitydisclosure" class="embiggen">Security Disclosure</a></li>
             </ul>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="bugreport">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Bug Report</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Bug Report</h3>
             <p>
               Found a bug on <code>sainternet.xyz</code>?
             </p>
@@ -198,8 +198,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="blacklist">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Blacklist Proposal</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Blacklist Proposal</h3>
             <p>
               Are one or more domains accessible via <code>dns.sainternet.xyz</code>, that you feel shouldn't be?
             </p>
@@ -210,8 +210,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="whitelist">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Whitelist Proposal</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Whitelist Proposal</h3>
             <p>
               Are one or more domains <i>inaccessible</i> via <code>dns.sainternet.xyz</code>, that you feel <i>should</i> be?
             </p>
@@ -222,8 +222,8 @@
         </div>
         <div class="sainternet-container mdl-grid" id="securitydisclosure">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Security Disclosure</span></h3>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Security Disclosure</h3>
             <p>
               Disclosures relating to the security (or <in>in</in>security rather) of <code>sainternet.xyz</code> can be directed in confidence to the following address:
             </p>
@@ -271,7 +271,7 @@
         </ul>
       </div>
     </footer>
-    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--4dp enlift"><icon class="material-icons">home</icon></a>
+    <a href="index.html" id="button_home" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--2dp enlift"><icon class="material-icons">home</icon></a>
     <a class="mdl-tooltip mdl-tooltip--left" for="button_home">
       Back to Home page.
     </a>
